--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://admin.saurashakti.com/api/v1
+REACT_APP_API_URL=http://13.201.173.28:9001/api/v1
 REACT_APP_ENVIRONMENT=development
 DISABLE_ESLINT_PLUGIN=true
