--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
+    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^7.3.5",
     "@mui/x-charts": "^8.16.0",
     "@mui/x-data-grid": "^8.16.0",
-    "@mui/x-date-pickers": "^8.21.0",
+    "@mui/x-date-pickers": "^8.27.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
