--- a/package.json
+++ b/package.json
@@ -2,43 +2,49 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@date-io/date-fns": "^3.2.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/lab": "^5.0.0-alpha.150",
-    "@mui/material": "^7.3.5",
-    "@mui/x-charts": "^8.16.0",
-    "@mui/x-data-grid": "^8.16.0",
-    "@mui/x-date-pickers": "^8.27.0",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.13.2",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.552.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
-  },
+
+"dependencies": {
+  "@date-io/date-fns": "^3.2.1",
+
+  "@emotion/react": "^11.11.4",
+  "@emotion/styled": "^11.11.0",
+
+  "@mui/icons-material": "^5.15.15",
+  "@mui/lab": "^5.0.0-alpha.170",
+  "@mui/material": "^5.15.15",
+
+  "@mui/x-charts": "^6.19.5",
+  "@mui/x-data-grid": "^6.19.5",
+  "@mui/x-date-pickers": "^6.19.5",
+
+  "axios": "^1.6.8",
+  "date-fns": "^3.6.0",
+  "framer-motion": "^10.18.0",
+  "lucide-react": "^0.452.0",
+
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-router-dom": "^6.22.3",
+
+  "react-scripts": "5.0.1",
+  "web-vitals": "^2.1.4",
+  "xlsx": "^0.18.5"
+},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,5 +56,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+
+  "engines": {
+    "node": ">=18 <=20",
+    "npm": ">=9"
   }
 }
