--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:9001/api/v1
+REACT_APP_API_URL=https://backend.sunergytechsolar.com/api/v1
 REACT_APP_ENVIRONMENT=development
 DISABLE_ESLINT_PLUGIN=true
