--- a/package.json
+++ b/package.json
@@ -2,43 +2,40 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-
-"dependencies": {
-  "@date-io/date-fns": "^2.17.0",
-  "@emotion/react": "^11.11.4",
-  "@emotion/styled": "^11.11.0",
-  "@mui/icons-material": "^5.15.15",
-  "@mui/lab": "^5.0.0-alpha.170",
-  "@mui/material": "^5.15.15",
-  "@mui/x-charts": "^6.19.5",
-  "@mui/x-data-grid": "^6.19.5",
-  "@mui/x-date-pickers": "^6.19.5",
-  "axios": "^1.6.8",
-  "date-fns": "^2.30.0",
-  "framer-motion": "^10.18.0",
-  "lucide-react": "^0.452.0",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "react-router-dom": "^6.22.3",
-  "react-scripts": "5.0.1",
-  "web-vitals": "^2.1.4",
-  "xlsx": "^0.18.5"
-},
-
+  "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^6.19.5",
+    "@mui/x-data-grid": "^6.19.5",
+    "@mui/x-date-pickers": "^6.19.5",
+    "axios": "^1.6.8",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.452.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,7 +48,6 @@
       "last 1 safari version"
     ]
   },
-
   "engines": {
     "node": ">=18 <=20",
     "npm": ">=9"
